--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,11 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     }
+    html{
+      height: 100%;
+    }
     body {
     background: #e27442;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
     }
     .todo-container {
     color: white;
